[gd_scene load_steps=3 format=3 uid="uid://bqinuq5p2gc2r"]

[ext_resource type="Script" path="res://Stages/Scenes/scene_handler.gd" id="1_5jux1"]
[ext_resource type="PackedScene" uid="uid://cymio5oinv5aj" path="res://Stages/Scenes/main_menu.tscn" id="1_kj308"]

[node name="SceneHandler" type="Node"]
script = ExtResource("1_5jux1")

[node name="MainMenu" parent="." instance=ExtResource("1_kj308")]

[connection signal="quit_game" from="MainMenu" to="." method="_on_main_menu_quit_game"]
[connection signal="start_level" from="MainMenu" to="." method="_on_main_menu_start_level"]
